@@ -13,9 +13,9 @@ dnl Set various version strings - taken gratefully from the GTk sources
 
 MAJOR_VERSION=2
 MINOR_VERSION=0
-MICRO_VERSION=9
-INTERFACE_AGE=3
-BINARY_AGE=9
+MICRO_VERSION=10
+INTERFACE_AGE=0
+BINARY_AGE=10
 VERSION=$MAJOR_VERSION.$MINOR_VERSION.$MICRO_VERSION
 
 AC_SUBST(MAJOR_VERSION)
